# MCUS

./: .gitignore  README.md  check_minecraft_username.py  execute.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
